# libhc

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  NOTICE  README.md  package.json
bench/: CMakeLists.txt  append.c  append_batched.c
include/: hc.h
include/hc/: array.h  buffer.h  caps.h  core.h  crypto.h  db.h  encodings.h  hashes.h  head.h  keys.h  manifest.h  merkle_tree.h  schema.h  storage.h  store.h
schema/: CMakeLists.txt  build.js  hc_schema.c  hc_schema.h  package.json  schema.json
src/: caps.c  core.c  crypto.c  hashes.c  init.c  keys.c  manifest.c  merkle_tree.c  storage.c  store.c
src/encodings/: keys.c  keys.h  manifest.c  schema.c  schema.h  tree_node.c
test/: CMakeLists.txt  core.c  crypto.c  db.c  manifest.c  storage.c  store.c  tmp.h
